--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//webdriver/API/Topic_02_Xpath.java=UTF-8
+encoding//webdriver/API/Topic_04_WebBrowser_Command.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
