Topic 07 08 Custom dropdown list

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//webdriver/API/Sample.java=UTF-8
 encoding//webdriver/API/Topic_02_Xpath.java=UTF-8
 encoding//webdriver/API/Topic_04_WebBrowser_Command.java=UTF-8
+encoding//webdriver/API/Topic_07_Cus_Dropdown.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
