--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//webdriver/API/Sample.java=UTF-8
 encoding//webdriver/API/Topic_02_Xpath.java=UTF-8
 encoding//webdriver/API/Topic_04_WebBrowser_Command.java=UTF-8
 encoding//webdriver/API/Topic_07_Cus_Dropdown.java=UTF-8
+encoding//webdriver/API/Topic_10_User_Interaction_I.java=UTF-8
 encoding//webdriver/javaTester/Getter_Setter.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
