--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,5 +7,6 @@ encoding//webdriver/API/Topic_10_User_Interaction_I.java=UTF-8
 encoding//webdriver/API/Topic_11_Popup.java=UTF-8
 encoding//webdriver/API/Topic_12_Iframe.java=UTF-8
 encoding//webdriver/API/Topic_13__Window.java=UTF-8
+encoding//webdriver/API/Topic_14_Javascript_Executor.java=UTF-8
 encoding//webdriver/javaTester/Getter_Setter.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
