--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,5 +8,7 @@ encoding//webdriver/API/Topic_11_Popup.java=UTF-8
 encoding//webdriver/API/Topic_12_Iframe.java=UTF-8
 encoding//webdriver/API/Topic_13__Window.java=UTF-8
 encoding//webdriver/API/Topic_14_Javascript_Executor.java=UTF-8
+encoding//webdriver/API/Topic_15_Upload_File.java=UTF-8
+encoding//webdriver/API/Topic_16_Wait_I.java=UTF-8
 encoding//webdriver/javaTester/Getter_Setter.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
