--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -12,5 +12,6 @@ encoding//webdriver/API/Topic_15_Upload_File.java=UTF-8
 encoding//webdriver/API/Topic_16_Wait_I.java=UTF-8
 encoding//webdriver/API/Topic_16_Wait_II.java=UTF-8
 encoding//webdriver/API/Topic_16_Wait_III.java=UTF-8
+encoding//webdriver/API/Topic_16_Wait_VI.java=UTF-8
 encoding//webdriver/javaTester/Getter_Setter.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
