--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -17,3 +17,11 @@ encoding//webdriver/API/Topic_16_Wait_VI.java=UTF-8
 encoding//webdriver/API/Topic_16_Wait_VII_Fluence.java=UTF-8
 encoding//webdriver/javaTester/Getter_Setter.java=UTF-8
 encoding//webdriver/javaTester/Topic_01_dataType.java=UTF-8
+encoding//webdriver/testNG/ReportListener.java=UTF-8
+encoding//webdriver/testNG/Topic_02_Assertion.java=UTF-8
+encoding//webdriver/testNG/Topic_03_Priority.java=UTF-8
+encoding//webdriver/testNG/Topic_04_Data_Provider.java=UTF-8
+encoding//webdriver/testNG/Topic_05_Parameter.java=UTF-8
+encoding//webdriver/testNG/Topic_06_Loop.java=UTF-8
+encoding//webdriver/testNG/Topic_07_Depedency.java=UTF-8
+encoding/<project>=UTF-8
